[gd_scene load_steps=5 format=3 uid="uid://wdaonuh20wuf"]

[ext_resource type="Script" path="res://weapons/plasmagun.gd" id="1_lw5x2"]
[ext_resource type="Texture2D" uid="uid://h0ax8725y08q" path="res://PNGs/3Weapons/plasmagun.png" id="2_75voe"]
[ext_resource type="AudioStream" uid="uid://bll2otffh05wj" path="res://sfx/shoot_plasma.wav" id="3_7m0u4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7hrp8"]
radius = 581.021

[node name="plasmagun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_lw5x2")

[node name="plasmagun_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7hrp8")

[node name="plasmagun_pivot" type="Marker2D" parent="."]

[node name="plasmagun_model" type="Sprite2D" parent="plasmagun_pivot"]
position = Vector2(50.9126, -0.490681)
scale = Vector2(1.33657, 1.68633)
texture = ExtResource("2_75voe")

[node name="plasmagun_muzzle" type="Marker2D" parent="plasmagun_pivot/plasmagun_model"]
unique_name_in_owner = true
position = Vector2(28.5, -1.91419)

[node name="plasmagun_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.12
autostart = true

[node name="plasmagun_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7m0u4")
volume_db = -6.0

[connection signal="timeout" from="plasmagun_timer" to="." method="_on_timer_timeout"]
